# grpc-rust

grpc-compiler/: Cargo.toml
grpc-compiler/src/: codegen.rs
grpc-compiler/test-protoc-plugin/: Cargo.toml
grpc-examples/greeter/: Cargo.toml
grpc-examples/route_guide/: Cargo.toml
grpc-protobuf/: Cargo.toml
grpc/src/client/: mod.rs
interop/: Cargo.toml
long-tests/with-rust/: Cargo.toml
protoc-rust-grpc/: Cargo.toml
