[package]
name = "grpc-compiler"
version = "0.7.0"
description = "gRPC compiler for rust-grpc"
license = "MIT/Apache-2.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]

[dependencies]
protobuf = "=3.0.0-pre"
protobuf-codegen = "=3.0.0-pre"

[[bin]]

name = "protoc-gen-rust-grpc"
test = false

[lib]

doctest = false
